My second doList

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,10 +15,34 @@
 <body>
 
 	
-	<div class="box">
-		Привет, я заготовка для твоего проекта!
+	<div class="todo">
+
+		<div class="todo-info">
+			<div class="todo-info__all">
+				Всего задач: 0
+			</div>
+			<!-- /.todo-info__all -->
+			<div class="todo-info__check">
+				Задач выполненно: 0
+			</div>
+			<!-- /.todo-ifo__check -->
+		</div>
+		<!-- /.todo-info -->
+		<div class="todo-go">
+			<input type="text" class="todo-go__input" placeholder="Введите свою цель">
+			<button id="add-task">Add</button>
+		</div>
+		<!-- /.todo-go -->
+		
+
+		<div class="todo-list">
+
+		</div>
+		<!-- /.todo-list -->
+
 	</div>
-	<!-- ./box -->
+	<!-- /.todo -->
+
 
 
 	<!-- myScript -->
